--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ body {
   -webkit-text-size-adjust: none;
 }
 ::selection {
-  background: #17f78e;
+  background: #e64a4a;
   color: white;
 }
 h1 {
