--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ body {
   -webkit-text-size-adjust: none;
 }
 ::selection {
-  background: #e64a4a;
+  background: #006adc;
   color: white;
 }
 h1 {
@@ -114,7 +114,7 @@ a {
   margin-bottom: 0;
 }
 .hero-title {
-  width: 69%;
+  width: 78%;
   margin-top: 19vh;
 }
 a {
